--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dockerode": "^4.0.9",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "minimatch": "^10.1.1",
     "mongoose": "^9.0.0",
